--- a/section1/index.html
+++ b/section1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>함수형 자바스크립트 기본기</title>
     <script src="../utils.js"></script>
     <script>
       const log = console.log;
