제너레이터/이터레이터 따라하기

--- a/section1/index.html
+++ b/section1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>함수형 자바스크립트 기본기</title>
-    <script src="../utils.js"></script>
+    <!-- <script src="../utils.js"></script> -->
     <script>
       const log = console.log;
       const clear = console.clear;
