함수형 자바스크립트 기본기, ES6에서의 순회와 이터러블: 이터레이터 프로토콜 복습

--- a/review/index.html
+++ b/review/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     hello
+    <script>
+      const log = console.log;
+      const clear = console.clear;
+    </script>
     <script src="utils.js"></script>
     <script src="index.js"></script>
   </body>
